# Havregryn

./: .gitignore  .gitmodules  Cargo.toml  README.md  bundler.toml
.github/workflows/: compile_plugin.yaml  github-actions-demo.yaml
Havregryn VST/Mac/Arm/Havregryn.vst3/Contents/: Info.plist
Havregryn VST/Mac/Arm/Havregryn.vst3/Contents/MacOS/: Havregryn
Havregryn VST/Mac/Intel/Havregryn_intel.vst3/Contents/MacOS/: Havregryn
Havregryn VST/Windows x86-64/Havregryn.vst3/Contents/x86_64-win/: Havregryn.vst3
src/: editor.rs  editor_iced.rs  lib.rs  main.rs  styles.css
src/editor/: mod.rs
src/editor/components/: mod.rs
src/editor/components/body/: mod.rs
src/editor/components/button/: mod.rs
src/editor/components/columns/: mod.rs
src/editor/components/header/: mod.rs
src/editor/components/slider/: mod.rs
src/multitable/: mod.rs
src/random/: mod.rs
xtask/: Cargo.toml
