[package]
name = "havregryn"
version = "0.1.2"
edition = "2021"
authors = ["Viktor Sandström <sandstrom.viktor@gmail.com>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/vsandstrom/havregryn.git"
description = "Granular sampler"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug", features = ["assert_process_allocs", "standalone"] }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug" }
rust_dsp = { git = "https://github.com/vsandstrom/rust_dsp", branch = "dev", version = "0.1.13" }
atomic_float = "0.1"
rand = "0.8.5"
vec-collections = "0.4.3"
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default-features = false, features = ["assert_process_allocs"] }

[profile.release]
lto = "thin"
strip = "symbols"


[profile.profiling]
inherits = "release"
debug = true
strip = "none"




